--- a/catalog/templates/catalog/base_generic.html
+++ b/catalog/templates/catalog/base_generic.html
@@ -19,6 +19,13 @@
           <li><a href="{% url 'books' %}">All books</a></li>
           <li><a href="{% url 'authors' %}">All authors</a></li>
           <li><a href="{% url 'admin:index' %}">Admin</a></li>
+          {% if user.is_authenticated %}
+            <li>User: {{ user.get_username }}</li>
+            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+          {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+          {% endif %} 
         </ul>
      {% endblock %}
 
