Adding the deploying_heroku_server_tutorial file

--- a/catalog/templates/catalog/bookinstance_list_borrowed_user.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_user.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "catalog/base_generic.html" %}
 
 {% block content %}
     <h1>Borrowed books</h1>
@@ -13,6 +13,7 @@
       {% endfor %}
     </ul>
 
+    
     {% else %}
       <p>There are no books borrowed.</p>
     {% endif %}       
